@@ -1,3 +1,8 @@
+2016-03-22  Rob Savoye  <rob.savoye@linaro.org>
+
+	* config/aarch64-fv8.exp: Add support for testing armv8 using the
+	ARM Foundation Model.
+
 2016-03-21  Ben Elliston  <bje@gnu.org>
 
 	* runtest.exp: Whitespace, comment and typo fixes.
